[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/menu_assets/menu_assets1.png" type="Texture" id=1]
[ext_resource path="res://Assets/menu_assets/menu_assets2.png" type="Texture" id=2]
[ext_resource path="res://Assets/menu_assets/menu_credits1.png" type="Texture" id=3]
[ext_resource path="res://Assets/menu_assets/menu_credits2.png" type="Texture" id=4]
[ext_resource path="res://Assets/menu_assets/menu_play1.png" type="Texture" id=5]
[ext_resource path="res://Assets/menu_assets/menu_play2.png" type="Texture" id=6]
[ext_resource path="res://Assets/menu_assets/menu_settings2.png" type="Texture" id=7]
[ext_resource path="res://Assets/menu_assets/menu_settings1.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Menu/Menu.gd" type="Script" id=9]
[ext_resource path="res://Logolar/PuraGameJam23Assets.webp" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.95, 20.8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36.95, 20.8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.95, 20.8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.95, 20.8 )

[node name="Menu" type="Node2D"]
script = ExtResource( 9 )

[node name="PlayButton" type="TouchScreenButton" parent="."]
position = Vector2( 441, 117 )
scale = Vector2( 3, 3 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
shape = SubResource( 3 )

[node name="SettingsButton" type="TouchScreenButton" parent="."]
position = Vector2( 826, 254 )
scale = Vector2( 3, 3 )
normal = ExtResource( 8 )
pressed = ExtResource( 7 )
shape = SubResource( 4 )

[node name="CreditsButton" type="TouchScreenButton" parent="."]
position = Vector2( 42, 263 )
scale = Vector2( 3, 3 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
shape = SubResource( 2 )

[node name="AssetsButton" type="TouchScreenButton" parent="."]
position = Vector2( 461, 433 )
scale = Vector2( 3, 3 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )

[node name="PuraGameJam23Assets" type="Sprite" parent="."]
position = Vector2( 1108, 613 )
scale = Vector2( 0.620642, 0.540365 )
texture = ExtResource( 10 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="AssetsButton" to="." method="_on_AssetsButton_pressed"]
